# swift-format-prebuilt

./: BUILD.bazel  MODULE.bazel  README.md  extensions.bzl
.bcr/: metadata.json  presubmit.yml
.github/workflows/: build.yml  ci.yml  release.yml
e2e/smoke/: BUILD.bazel  MODULE.bazel  version_test.sh
testdata/: sample.swift
